--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@monaco-editor/react": "^4.6.0",
     "@mui/material": "^6.2.1",
+    "@mui/x-data-grid": "^7.23.5",
     "@uiw/react-json-view": "^2.0.0-alpha.30",
     "axios": "^1.7.9",
     "react": "^18.3.1",
