--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "@monaco-editor/react": "^4.6.0",
     "@mui/material": "^6.2.1",
     "@mui/x-data-grid": "^7.26.0",
+    "@tailwindcss/postcss": "^4.0.6",
+    "@tailwindcss/vite": "^4.0.6",
     "@uiw/react-json-view": "^2.0.0-alpha.30",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "react": "^18.3.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-json-editor-ajrm": "^2.5.14",
     "react-router": "^7.0.2",
@@ -29,10 +34,13 @@
     "@types/react-dom": "^18.3.1",
     "@types/react-json-editor-ajrm": "^2.5.6",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.15.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
+    "postcss": "^8.5.2",
+    "tailwindcss": "^4.0.6",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
     "vite": "^6.0.1"
