--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@uiw/react-json-view": "^2.0.0-alpha.30",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
+    "jotai": "^2.12.2",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
