--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "jotai": "^2.12.2",
+    "mathjs": "^14.4.0",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
