--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@tailwindcss/vite": "^4.0.6",
     "@uiw/react-json-view": "^2.0.0-alpha.30",
     "axios": "^1.7.9",
+    "cron-parser": "^5.0.4",
+    "cronstrue": "^2.56.0",
     "date-fns": "^4.1.0",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
